2006-10-28 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b19

 * CHANGE: Removed Js function localGetElementsByTagName() and
	   nnGetAllLayers.
	   So the config wizard does NOT WORK IN Netscape 4 anymore !

 * Change: Again nicifying in config wizard.
	   Put longer messages in step 1 into a toggle Box.

 * Change: Typo toogle -> toggle (Is there something well known with *oogle ?).

 * Fix: typo in step 1, "nogo" is no type for infoBoxes.

 * Change: indenting and " to ' convertion.

 * Change: Use of galleryTable() in step 1, along with css adjustment.

 * Removed: css/config.css.default

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b18

 * New: Added field initialized to Gallery UserDB.
	Set if the UserDB was successfully initialized.

 * New: userDB->isInitialized()

 * Change: Much more detailed infos about userdir failures.

 * Change: Check for userDB initialization in init.php,
	   don't do the automatic user upgrade.

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b17

 * Fix: Added 2 missing files to $safe_to_include list.

   Thanks to Kai Tomalik.

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b16

 * Change: After saving the album properties,
	   the tab which was last edited is still selected.

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b15

 * New: function generateCaption()

 * New: function getLabelByIndex()

 * Change: Use label for feature block.
	   Now you can feature any type of item.

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b14

 * New: function toogleButton()

 * New: function toogleBox()

2006-10-27 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b13

 * Fix: Save did not work in rearrange items.

 * Fix: Typo in stats-wizard.php prevented the generated url to show up.

 Thanks to Peter Schumacher for finding and reporting those bugs.

 * Fix: Remove -v from jhead, as the output has different structure.

 * Fix: Autorotate rotated in the wrong direction.

 * Fix: still some _(), converted to gTranslate()
