@@ -526,3 +526,11 @@ table.g-albums-table .g-albumdesc-cell {
     background: green;
     height: 10px;
 }
+
+.albumUpgradeStatus {
+    margin-top: 3px;
+    padding: 2px;
+    overflow: scroll;
+    height: 200px;
+    border: 1px dashed red;
+}
