@@ -752,3 +752,7 @@ input:focus, textarea:focus, select:focus {
 }
 
 /******************** End autocomplete *********************/
+
+.albumUpgradeStatus {
+    border: 1px dashed #669;
+}
