@@ -31,7 +31,7 @@
  * we want to keep track to see  if we're in an include loop.  If so, return.
  */
 if (!isset($UPGRADE_LOOP)) {
-	$UPGRADE_LOOP=0;
+	$UPGRADE_LOOP = 0;
 }
 $UPGRADE_LOOP++;
 if ($UPGRADE_LOOP == 2) {
@@ -44,6 +44,12 @@ if (!isset($gallery->version)) {
 
 list($upgrade_albumname, $upgradeall) = getRequestVar(array('upgrade_albumname', 'upgradeall'));
 
+// Hack check
+if (!$gallery->user->isAdmin() && empty($upgrade_albumname)) {
+	echo gTranslate('core', "You are not allowed to perform this action!");
+	exit;
+}
+
 /*
  * If we're not the admin, we can only upgrade the album that we're
  * looking at.
@@ -52,126 +58,125 @@ if ($gallery->session->albumName) {
 	$upgrade_albumname = $gallery->session->albumName;
 }
 
-// Hack check
-if (!$gallery->user->isAdmin() && empty($upgrade_albumname)) {
-	echo gTranslate('core', "You are not allowed to perform this action!");
-	exit;
-}
-
 $albumDB = new AlbumDB(FALSE);
 
-function reload_button() {
-	print "<center>";
-	print "<form>";
-	echo gButton("done", gTranslate('core', "_Done"), 'location.reload()');
-	print "</form>";
-	print "</center>";
-}
-
-function end_file() {
-	print "\n</div>";
-	print "\n</body>";
-	print "\n</html>";
-}
-
-function process($album=null) {
+function process($album = null) {
 	global $albumDB;
 
-	print "<br>";
-	print "<b>" . gTranslate('core', "Progress") .":</b>";
-	print "<ul>";
+	echo addProgressbar('mainProgessbar', gTranslate('core', "Total Progress:"));
+	echo "\n<br>";
+	echo addProgressbar('albumProgessbar', gTranslate('core', "Album Progress:"));
+
 	if ($album) {
-		print "<b>". gTranslate('core', "Album") . ": " . $album->fields["title"] . "</b><br>";
+		echo '<br><span class="g-emphasis">' .
+		  sprintf(gTranslate('core', "Album: %s"), $album->fields["title"]) .
+		  "</span>\n";
+
 		// Upgrade the album
 		if ($album->integrityCheck()) {
 			$album->save(array(), 0);
 		}
-		print "<br>";
-	} else {
-		foreach ($albumDB->outOfDateAlbums as $albumName) {
 
+		echo "\n<script type=\"text/javascript\">updateProgressBar('mainProgessbar', '',100)</script>";
+		echo "\n<script type=\"text/javascript\">updateProgressBar('albumProgessbar', '',100)</script>";
+	}
+	else {
+	    $count = sizeof($albumDB->outOfDateAlbums);
+	    $onePercent = 100/$count;
+	    $i = 0;
+
+	    echo '<br><div class="g-emphasis"><i>' . gTranslate('core', "Statusbox") . '</i></div>';
+	    echo gTranslate('core', "Please ensure there are no errors.");
+	    echo '<div class="albumUpgradeStatus">';
+		foreach ($albumDB->outOfDateAlbums as $albumName) {
+            $i++;
 			// Retrieve the album
 			$album = $albumDB->getAlbumByName($albumName);
 
-			print "<b>". gTranslate('core', "Album") . ": " . $album->fields["title"] . "</b><br>";
+			echo "\n<div class=\"g-emphasis\">".
+			     sprintf(gTranslate('core', "Album: %s"), $album->fields["title"]) .
+			     "</div>";
 
 			// Upgrade the album
 			if ($album->integrityCheck()) {
 				$album->save(array(), 0);
 			}
 
-			print "<br>";
+			echo "\n<script type=\"text/javascript\">updateProgressBar('mainProgessbar', '',". ceil($i * $onePercent) .")</script>";
+			print "<br><br>";
 		}
+		echo "</div>";
 	}
-	print "</ul>";
 }
 
+/* Start HTML output */
 printPopupStart(gTranslate('core', "Upgrade Albums"), '', 'left');
 
-echo "<p>";
-echo gTranslate('core', "The following albums in your gallery were created with an older version of the software and are out of date.");
-echo '<br>';
-echo gTranslate('core', "This is not a problem!");
-echo '<p>';
-echo gTranslate('core', "We can upgrade them.  This may take some time for large albums but we'll try to keep you informed as we proceed.");
-echo '<br>';
-echo gTranslate('core', "None of your photos will be harmed in any way by this process.");
-echo '<br>';
-echo gTranslate('core', "Rest assured, that if this process takes a long time now, it's going to make your gallery run more efficiently in the future.");
-
-echo "\n</p>";
-
 if (isset($upgrade_albumname)) {
-	$album = new Album();
-	$album->load($upgrade_albumname);
+    $album = new Album();
+    $album->load($upgrade_albumname);
+
+    if ($album->versionOutOfDate()) {
+        process($album);
+        $actionDone = true;
+    }
+}
+elseif (isset($upgradeall) && sizeof($albumDB->outOfDateAlbums)) {
+    process();
+    $actionDone = true;
 }
 
-if (isset($album) && $album->versionOutOfDate()) {
-	process($album);
-	reload_button();
-	end_file();
-	exit;
-}
-
-if (isset($upgradeall) && sizeof($albumDB->outOfDateAlbums)) {
-	process();
-	reload_button();
-	end_file();
-	exit;
-}
-
-
-if (!sizeof($albumDB->outOfDateAlbums)) {
+if (sizeof($albumDB->outOfDateAlbums) == 0) {
 	print "<b>". gTranslate('core', "All albums are up to date.") ."</b>";
-} else {
+}
+elseif (!isset($actionDone)) {
+    echo gTranslate('core', "Some albums in your gallery were created with an older version of the software and are out of date.");
+    echo '<br>';
+    echo gTranslate('core', "This is not a problem!");
+    echo '<p>';
+    echo gTranslate('core', "We can upgrade them.  This may take some time for large albums but we'll try to keep you informed as we proceed.");
+    echo '<br>';
+    echo gTranslate('core', "None of your photos will be harmed in any way by this process.");
+    echo '<br>';
+    echo gTranslate('core', "Rest assured, that if this process takes a long time now, it's going to make your gallery run more efficiently in the future.");
 
 	echo "\n<p>";
 	echo sprintf(gTranslate('core', "The following albums need to be upgraded.  You can process them individually by clicking the upgrade link next to the album that you desire, or you can just %s."),
 		'<a class="g-error" href="' . makeGalleryUrl("upgrade_album.php", array("upgradeall" => 1, 'type' => 'popup')) . '"><b>' . gTranslate('core', "upgrade them all at once") . '</b></a>');
 
 	echo '</p>';
-	echo "\n<table align=\"center\">";
+
+	$updateList = new galleryTable();
+
+	$updateList->setAttrs(array('align' => 'center'));
+
 	foreach ($albumDB->outOfDateAlbums as $albumName) {
 		$album = $albumDB->getAlbumByName($albumName);
-		echo "\n<tr>";
-		echo '<td><b>'. $album->fields["title"] . '</b></td>';
-		echo '<td>('. $album->numPhotos(1) .' '. gTranslate('core', "items"). ')</td>';
-		echo '<td>'. galleryLink(
-		  makeGalleryUrl("upgrade_album.php",
-		      array("upgrade_albumname" => $album->fields["name"], 'type' => 'popup')),
-		      gTranslate('core', "upgrade"), '', '', true
-		  ) .'</td>';
-		echo '</tr>';
+
+		$updateList->addElement(array(
+		  'content' => $album->fields["title"],
+		  'cellArgs' => array('class' => 'g-emphasis')));
+
+		$updateList->addElement(array(
+            'content' => gTranslate('core', "One item", "%s items", $album->numPhotos(1), gTranslate('core', "Empty"),true),
+            'cellArgs' => array('class' => 'right')));
+
+		$updateList->addElement(array('content' => galleryLink(
+            makeGalleryUrl('upgrade_album.php', array(
+                'upgrade_albumname' => $album->fields['name'],
+                'type' => 'popup')),
+            gTranslate('core', "upgrade"), '', '', true)));
 	}
-	echo "\n</table>\n";
+
+	echo $updateList->render();
 }
-
-	print '<center><form name="close" action="#">';
-        echo gButton("close", gTranslate('core', "_Done"), 'opener.location.reload(); parent.close()');
-	print '</form></center>';
-
-	echo "\n</div>";
-	print gallery_validation_link("upgrade_album.php");
 ?>
+    <form action="#" class="center">
+    <?php echo gButton("reloadButton", gTranslate('core', "_Reload"), 'location.reload()'); ?>
+    <?php echo gButton("closeButton", gTranslate('core', "_Close Window"), 'parent.close()'); ?>
+    </form>
+
+</div>
+
 </body>
 </html>
