@@ -1,3 +1,12 @@
+2006-10-29 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b20
+
+ * New: Progressbar
+     - function addProgressbar().
+     - javascript to update the progressbar.
+     - css for progessbar.
+
+ * Change: Use progressbar in album update.
+
 2006-10-28 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b19
 
  * CHANGE: Removed Js function localGetElementsByTagName() and
